Fix horizontal scrolling issue on mobile

--- a/style.css
+++ b/style.css
@@ -1188,3 +1188,9 @@ a {
         padding: 5px !important;
     }
 }
+
+/* Fix horizontal scroll issue on mobile */
+html, body {
+    overflow-x: hidden !important;
+    max-width: 100vw !important;
+}
